--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name example.org;
+    server_name yataw.com;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
@@ -14,18 +14,22 @@ server {
 
 server {
     listen 443 ssl;
-    server_name example.org;
+    server_name yataw.com;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/yataw.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/yataw.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass  http://example.org;
         proxy_set_header    Host                $http_host;
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+    }
+
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   html;
     }
 }
